force-app/main/default/objects/sked__Availability_Template_Resource__c/sked__Availability_Template_Resource__c.object-meta.xml
<CustomObject>
    <label>Availability Template Resource</label>
    <nameField>
        <displayFormat>ATR-{0000}</displayFormat>
        <label>Availability Template Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Template Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>