force-app/main/default/objects/sked__Availability_Template_Resource__c/fields/sked__Migrated__c.field-meta.xml
<CustomField>
    <fullName>sked__Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the template resource has been migrated to a pattern resource</inlineHelpText>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>